[Add] salary and postcode
